--- a/servers/cooperplanet.conf
+++ b/servers/cooperplanet.conf
@@ -51,7 +51,7 @@ server {
   proxy_buffering off;
 
   location / {
-    proxy_pass http://172.17.0.1:8000/;
+    proxy_pass http://localhost:8000/;
     proxy_set_header X-Real-IP  $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
