--- a/servers/gloogo.conf
+++ b/servers/gloogo.conf
@@ -3,7 +3,7 @@ server {
   server_name gloogo.io www.gloogo.io;
 
   location / {
-    proxy_pass http://localhost:8001/;
+    proxy_pass http://192.168.1.252:8001/;
     proxy_set_header X-Real-IP  $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
@@ -51,7 +51,7 @@ server {
   proxy_buffering off;
 
   location / {
-    proxy_pass http://localhost:8001/;
+    proxy_pass http://192.168.1.252:8001/;
     proxy_set_header X-Real-IP  $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
