--- a/servers/pokecodex.conf
+++ b/servers/pokecodex.conf
@@ -3,7 +3,7 @@ server {
   server_name ppdex.pro www.ppdex.pro pokecodex.com www.pokecodex.com;
 
   location / {
-    proxy_pass http://localhost:8002/;
+    proxy_pass http://192.168.1.252:8002/;
     proxy_set_header X-Real-IP  $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
@@ -51,7 +51,7 @@ server {
   proxy_buffering off;
 
   location / {
-    proxy_pass http://localhost:8002/;
+    proxy_pass http://192.168.1.252:8002/;
     proxy_set_header X-Real-IP  $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
