--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,11 @@ services:
       - '443:443'
     # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     command: /bin/sh -c "nginx -g 'daemon off;'"
+    restart: always
   certbot:
     image: certbot/certbot:latest
-    restart: unless-stopped
     volumes:
       - /home/admin/host-files/certbot/conf:/etc/letsencrypt
       - /home/admin/host-files/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    restart: always
